...
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <EditText
        android:id="@+id/edtGaragePassword"
        android:layout_width="248dp"
        android:layout_height="52dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Garage Password"
...
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <EditText
        android:id="@+id/edtGarageEmail"
        android:layout_width="248dp"
        android:layout_height="52dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Garage Email"
...
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <ImageView
        android:id="@+id/btnNext"
        android:layout_width="92dp"
        android:layout_height="78dp"
        android:src="@drawable/next_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
...
